<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".picker.activity.CropActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/picture_picker_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimary"
        android:elevation="4dp"
        android:navigationIcon="@drawable/picture_picker_navigation"
        android:theme="?toolbar"
        app:navigationIcon="@drawable/picture_picker_navigation"
        tools:targetApi="lollipop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/crop"
                android:textColor="?attr/albumElementColor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/picture_picker_btn_crop"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:foreground="?selectableItemBackground"
                android:gravity="center"
                android:text="@string/button_sure_default"
                android:textColor="?attr/albumElementColor"
                android:textSize="16sp" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <com.steelkiwi.cropiwa.CropIwaView
        android:id="@+id/picture_picker_crop_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/picture_picker_toolbar"
        app:ci_dynamic_aspect_ratio="false" />

    <TextView
        android:id="@+id/picture_picker_crop_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/picture_brows_empty"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />

</RelativeLayout>